<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#212328">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_no_internet_connection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:gravity="center"
        android:text="@string/the_internet_connection_has_been_lost_we_can_show_you_your_saved_local_data"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_show_local_data"
        style="@style/BaseNoInternetLayoutTextViewWithActionStyle"
        android:text="@string/show_saved_data"
        app:layout_constraintBottom_toTopOf="@id/tv_or" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="OR"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tv_do_not_show_anymore" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_do_not_show_anymore"
        style="@style/BaseNoInternetLayoutTextViewWithActionStyle"
        android:text="@string/do_not_show_anymore"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>